--- a/README
+++ b/README
@@ -1,7 +1,11 @@
 A simple wrapper for returning IOPlatformExpertDevice keys
+
+Usage
+./platformExpert serial-number
+
 This is a work in progress
 
 Known Issues:
-
+4 Extra charcters added to Serial number
 Seg Faults on no parameters
 Does not return non binary keys
